iconos svg, colors refactor y menu

--- a/head.html
+++ b/head.html
@@ -1,4 +1,6 @@
 <!-- Primary Meta Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Thousand 10</title>
 <meta name="title" content="Thousand 10">
 <meta name="description"
